[package]
name = "libopus_sys"
version = "0.3.0"
license = "MIT"
repository = "https://github.com/cijiugechu/libopus_sys.git"
authors = ["nemurubaka <cijiugechu@gmail.com>"]
keywords = ["audio", "opus", "codec"]
categories = ["api-bindings", "compression", "encoding",
	"multimedia::audio", "multimedia::encoding"]
description = "FFI-Binding to Opus, dynamically or statically linked for Windows and UNIX."
readme = "README.md"
documentation = "https://docs.rs/libopus_sys"
edition = "2021"

[dependencies]

[build-dependencies]
log = "0.4"
pkg-config = "0.3"
cmake = "0.1"

[build-dependencies.bindgen]
version = "0.70"
optional = true

[features]
default = []
dynamic = []
static = []
generate_binding = ["bindgen"]
